# codesphere-backend

./: .gitignore  README.md  data.json  export_data.py  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  start.sh
account/: admin.py  models.py  serializer.py  urls.py  utilities.py  views.py
account/migrations/: 0001_initial.py
codeexequeue/: admin.py  apps.py  models.py
comments/: admin.py  models.py  serialzer.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_alter_comments_parent.py  0003_remove_comments_is_solution_remove_comments_problem_and_more.py
config/: settings.py  urls.py
problems/: admin.py  models.py  pagination.py  serializer.py  urls.py  views.py
problems/migrations/: 0001_initial.py  0002_problems_companies.py  0003_problems_status.py  0004_problems_acceptance_count.py  0005_tag.py  0006_remove_problems_status.py
runcode/: admin.py  apps.py  models.py  urls.py  utility.py  views.py
runcode/migrations/: 0001_initial.py  0002_code.py
solutions/: admin.py  models.py  pagination.py  serializer.py  urls.py  views.py
solutions/migrations/: 0001_initial.py  0002_solutuionlike.py  0003_solutions_created_at.py  0004_solutions_title.py
src/: App.jsx  index.css  main.jsx
src/components/: ActionButtons.jsx  EditorSetting.jsx  Footer.jsx  Loader.jsx  Navbar.jsx  Problem.jsx  ProblemNavBar.jsx  RightPanel.jsx  SolutionPostLoader.jsx
src/pages/: Hello.jsx  Home.jsx  Layout.jsx  Login.jsx  MarkdownHelper.jsx  (+4 more)
submissions/: admin.py  models.py  serailzer.py  urls.py  utility.py  views.py
(+63 files in other folders)
